--- a/.github/workflows/artcon_front_ci.yml
+++ b/.github/workflows/artcon_front_ci.yml
@@ -5,9 +5,9 @@ env:
 
 on:
   push:
-    branches: [ "Dev" ]
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "Dev" ]
+    branches: [ "dev" ]
 jobs:
   build:
 
