rebase bottom_navbar onto authentication

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ArtCon_test"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
-        <activity
+        tools:targetApi="31"
+>      <activity
             android:name=".SignupActivity"
             android:exported="false" />
         <activity
@@ -26,6 +26,16 @@
         <activity
             android:name=".OnBoardingActivity"
             android:exported="true">
+
+        <activity
+            android:name=".BottomNavbarActivity"
+            android:exported="false"
+            android:label="@string/title_activity_bottom_navbar" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
