--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
         android:theme="@style/Theme.Artcon_test"
         tools:targetApi="31">
         <activity
+            android:name=".chat.Controller.MessageActivity"
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
             android:name=".chat.ConversationsActivity"
             android:exported="false" />
-        <activity
-            android:name=".chat.Controller.MessageActivity">
-        </activity>
 
         <activity
             android:name=".BottomNavbarActivity"
