navbar done, feed get all posts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ArtCon_test"
-        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".ProfileSetup"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.OnBoardingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
