--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
 
     <uses-feature android:name="android.hardware.camera" android:required="true" />
 
-
     <application
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
@@ -39,12 +38,9 @@
         <activity
             android:name=".ui.ForgotPasswordActivity"
             android:exported="false" />
-
-
         <activity
             android:name=".ui.MainNavActivity"
-            android:exported="true"
-/>
+            android:exported="true" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"/>
