--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".CreatePost"
+            android:name=".CreatePortfolioPost"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
