--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".chat.BasicActivity"
+            android:exported="false" />
+        <activity
             android:name=".chat.UsersFirstActivity"
             android:exported="false" />
         <activity
@@ -73,12 +76,6 @@
             </intent-filter>
         </service>
 
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ProfileSetup"
-            android:exported="false" />
     </application>
 
 </manifest>
